# rpg2000_ogg_hooker

./: CMakeLists.txt  LICENSE  NOTICE.md  README.md  RPG2000_OGG_HOOKER_LICENSE.txt
docs/: hooker_override_notes.md
src/hooker/: hook_audio.inc  hook_dll.cpp  launcher.cpp  log.cpp  log.h  mf_ogg_decoder.cpp  mf_ogg_decoder.h  paths.cpp  paths.h
